--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
     <body>
         <div class = "header">
             <div class = "head-con">
-                <div class = "home-logo"><img src = "iconImg/nav_logo.svg"></div>
+                <a class = "home-logo" href="index.html"><img src = "iconImg/nav_logo.svg"></a>
                 <div class = "navi">
-                    <div class ="part">About</div>
-                    <div class ="part" id = "now">Portfolio</div>
-                    <div class ="part">Contact</div>
+                    <a class ="part" href = "waiting.html">About</a>
+                    <a class ="part" id = "now" href = "index.html">Portfolio</a>
+                    <a class ="part" href = "waiting.html">Contact</a>
                 </div>
 
                 <div class = "mobile-icon">
