--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
         <div class = "header">
             <div class = "head-con">
                 <a class = "home-logo" href="index.html"><img src = "iconImg/nav_logo.svg"></a>
-                <div class = "navi">
-                    <a class ="part" href = "waiting.html">About</a>
+                <!-- <div class = "navi">
+                    <a class ="part" href = "about.html">About</a>
                     <a class ="part" id = "now" href = "index.html">Portfolio</a>
                     <a class ="part" href = "waiting.html">Contact</a>
-                </div>
+                </div> -->
 
                 <div class = "mobile-icon">
                     <img src = "iconImg/m_hamburger.svg">
@@ -253,69 +253,70 @@
                 <div class = "nav-part" id = "nav-ux">UX</div>
                 <div class = "nav-part" id = "nav-bx">BX</div>
                 <div class = "nav-part" id = "nav-mot">Motion</div>
-                <div class = "nav-part" id = "nav-mus">Music</div>
+                <!-- <div class = "nav-part" id = "nav-mus">Music</div> -->
             </div>
 
             <div class = "thum-con">
-                <div class = "thum-big" id = "wux">
+                <a href="wagglez.html" class = "thum-big" id = "wux" >
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/studio_wagglez.jpg">
-                </div>
+                </a>
 
                 <div class = "thum-group">
-                    <div class = "thum" id = "wux1">
+                    <a href="moms.html" class = "thum" id = "wux1">
                         <img src = "workImg/moms_thum.jpg">
                         <div class = "tag-con">
                             <div class = "tag" id = "s">UX</div>
                         </div>
-                    </div>
-                    <div class = "thum" id = "wux2">
+                    </a>
+
+                    <a href= "stepBy.html" class = "thum" id = "wux2">
                         <img src = "workImg/stepBy_thum.svg">
                         <div class = "tag-con">
                             <div class = "tag" id = "sb">UX</div>
                             
                         </div>
-                    </div>
-                    <div class = "thum" id = "wbx">
+                    </a>
+                    <a href = "onmubang.html" class = "thum" id = "wbx">
                         <img src = "workImg/onmub_thum.jpg">
                         <div class = "tag-con">
                             <div class = "tag" id = "s">BX</div>
                         </div>
-                    </div>
-                    <div class = "thum" id = "wbx2">
+                    </a>
+                    <a href = "daegu.html"class = "thum" id = "wbx2">
                         <img src = "workImg/daegu_thum.jpg">
                         <div class = "tag-con">
                             <div class = "tag" id = "s">BX</div>
                         </div>
-                    </div>
+                    </a>
                     
                 </div>
 
                 <div class = "thum-mid-group">
 
 
-                    <div class = "thum-mid" id = "wmo">
+                    <a href="dxdvideo.html" class = "thum-mid" id = "wmo">
                         <img src = "workImg/school_thum.jpg">
                         <div class = "tag-con">
                             <div class = "tag" id = "w">Motion</div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class = "thum-mid" id = "wmo2">
+                    <!-- <div class = "thum-mid" id = "wmo2">
                         <img src = "workImg/hixx_thum.png">
                         <div class = "tag-con">
                             <div class = "tag" id = "wb">Motion</div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class = "thum-mid" id = "wmu">
+                    <!-- <div class = "thum-mid" id = "wmu">
                         <img src = "workImg/first_album.jpg">
                         <div class = "tag-con">
                             <div class = "tag" id = "wb">Music</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -323,140 +324,138 @@
             <!-- 패드 아이템들 -->
 
             <div class = "thum-pad-con">
-                <div class = "thum-pad" id = "wagglez"> 
+                <a href="wagglez.html" class = "thum-pad" id = "wagglez"> 
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/studio_wagglez.jpg">
-                </div>
+                </a>
 
                 <!-- Wagglez -->
 
-                <div class = "thum-pad" id = "mom">
+                <a href="moms.html" class = "thum-pad" id = "mom">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/moms_thum.jpg">
-                </div>
+                </a>
 
                 <!-- Moms Profile -->
             </div>
 
             <div class = "thum-pad-con">
 
-                <div class = "thum-pad" id = "step">
+                <a href = "stepBy.html" class = "thum-pad" id = "step">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/stepBy_thum.svg">
-                </div>
+                </a>
 
                 <!-- Step By -->
 
-                <div class = "thum-pad" id = "onmubang">
+                <a href="onmubang.html" class = "thum-pad" id = "onmubang">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">BX</div>
                     </div>
                     <img src = "workImg/onmub_thum.jpg">
-                </div>
+                </a>
 
                 <!-- Onmubang -->
             </div>
 
             <div class = "thum-pad-con">
 
-                <div class = "thum-pad" id = "daegu">
+                <a href="daegu.html" class = "thum-pad" id = "daegu">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">BX</div>
                     </div>
                     <img src = "workImg/daegu_thum.jpg">
                     <!-- 학과홍보영상 -->
-                </div>
+                </a>
 
-                <div class = "thum-pad" id = "school">
+                <a href="dxdvideo.html" class = "thum-pad" id = "school">
                     <div class = "tag-con">
                         <div class = "tag" id = "w">Motion</div>
                     </div>
                     <img src = "workImg/school_thum.jpg">
                     <!-- HIXX -->
-                </div>
+                </a>
             </div>
 
-            <div class = "thum-pad-con">
+            <!-- <div class = "thum-pad-con">
                 <div class = "thum-pad" id = "hixx">
                     <div class = "tag-con">
                         <div class = "tag" id = "wb">Motion</div>
                     </div>
                     <img src = "workImg/hixx_thum.png">
-                    <!-- 앨범 -->
                 </div>
 
-                <div class = "thum-pad" id = "album">
+                <div class = "thum-pad">
                     <div class = "tag-con">
                         <div class = "tag" id = "wb">Music</div>
                     </div>
                     <img src = "workImg/first_album.jpg">
-                    <!-- 텍스트 -->
                 </div>
-            </div>
+            </div> -->
 
             <!-- 모바일 아이템들 -->
             <div class = "thum-mob-con">
-                <div class = "thum-mob-ux">
+                <a href="wagglez.html" class = "thum-mob-ux">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/studio_wagglez.jpg">
-                </div>
+                </a>
 
-                <div class = "thum-mob-ux">
+                <a href="moms.html" class = "thum-mob-ux">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/moms_thum.jpg">
-                </div>
+                </a>
 
-                <div class = "thum-mob-ux">
+                <a href="stepBy.html" class = "thum-mob-ux">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">UX</div>
                     </div>
                     <img src = "workImg/stepBy_thum.svg">
-                </div>
+                </a>
 
-                <div class = "thum-mob-bx">
+                <a href="onmubang.html" class = "thum-mob-bx">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">BX</div>
                     </div>
                     <img src = "workImg/onmub_thum.jpg">
-                </div>
+                </a>
 
-                <div class = "thum-mob-bx">
+                <a href="daegu.html" class = "thum-mob-bx">
                     <div class = "tag-con">
                         <div class = "tag" id = "s">BX</div>
                     </div>
                     <img src = "workImg/daegu_thum.jpg">
-                </div>
+                </a>
 
-                <div class = "thum-mob-mo">
+                <a href="dxdvideo.html" class = "thum-mob-mo">
                     <div class = "tag-con">
                         <div class = "tag" id = "w">Motion</div>
                     </div>
                     <img src = "workImg/school_thum.jpg">
-                </div>
+                </a>
 
-                <div class = "thum-mob-mo">
+                <!-- <div class = "thum-mob-mo">
                     <div class = "tag-con">
                         <div class = "tag" id = "wb">Motion</div>
                     </div>
                     <img src = "workImg/hixx_thum.png">
-                </div>
+                </div> -->
 
-                <div class = "thum-mob-mu">
+                <!-- <div class = "thum-mob-mu">
                     <div class = "tag-con">
                         <div class = "tag" id = "wb">Music</div>
                     </div>
                     <img src = "workImg/first_album.jpg">
-                </div>             
+                </div>              -->
 
             </div>
 
